# bio-data-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/agent/: __init__.py  graph.py  nodes.py  signals.py  state.py  transitions.py
app/config/: __init__.py  logging.py  settings.py
app/models/: llm_config.py  structured_outputs.py  task.py
app/prompts/: __init__.py  clarification.py  code_generation.py  code_planning.py  execution_observer.py  general_answer.py  plan_generation.py  planning.py  reflection.py  task_response_generation.py
app/routers/: agent_router.py  task_router.py
app/scripts/: limited_tree.sh  s3_download.py  s3_upload.py
app/services/: agent_service.py  executor_service.py  llm_provider_service.py  task_service.py
app/services/agent/: __init__.py  graph.py  nodes.py  signals.py  state.py  transitions.py
app/services/llm/: __init__.py  anthropic_service.py  base_llm_service.py  google_service.py  llm_provider_service.py  llm_service.py  openai_service.py
app/utils/: __init__.py  datafile.py  nb_builder.py  observations.py  security.py  singleton.py  string_utils.py
example/: dose_response.csv  task.md
ui/: .env.local.example  README.md  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/types/: task.ts
